# oscn-news

./: .gitignore  README.md  court_summaries_20250218_152917.csv  podcast_script_20250218_152917.txt  publish.py  pyproject.toml  read_oscn.ipynb
