[tool.poetry]
name = "oscn-news"
version = "0.1.0"
description = "Read latest filings and create media outputs"
authors = ["jdungan <johnadungan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oscn = "^0.0.0.89"
ipykernel = "^6.29.5"
selectolax = "^0.3.27"
aiohttp = "^3.11.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
transformers = "^4.48.3"
torch = "^2.6.0"
tiktoken = "^0.9.0"
blobfile = "^3.0.0"
accelerate = "^1.4.0"
bitsandbytes = "0.41.1"
gtts = "^2.5.4"
elevenlabs = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
